# SkeetSDK

./: .gitignore  CMakeLists.txt  README.md
skeet-sdk/: dllmain.cpp  skeet-sdk.vcxproj  skeetsdk.h
src/: dllmain.cpp
